force-app/main/default/objects/High_Value_Deal_Closed__e/High_Value_Deal_Closed__e.object-meta.xml
<PlatformEvent>
    <description>Platform Event fired when a high-value Opportunity closes (Closed Won with Amount >= $100,000). Used to trigger notifications and downstream processing.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <description>The deal amount of the closed Opportunity.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>The close date of the Opportunity.</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <description>The Salesforce ID of the closed Opportunity.</description>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>The name of the Opportunity.</description>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <description>The Salesforce ID of the Opportunity Owner, used for targeting the notification.</description>
        <label>Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>High Value Deal Closed</label>
</PlatformEvent>