force-app/main/default/objects/High_Value_Deal_Closed__e/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Store the deal amount of the closed Opportunity</description>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>