force-app/main/default/objects/High_Value_Deal_Closed__e/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>Date field on the Platform Event to store the close date of the Opportunity</description>
    <type>Date</type>
</CustomField>