force-app/main/default/objects/High_Value_Deal_Closed__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Stores the Salesforce ID of the closed Opportunity</description>
    <label>Opportunity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>