force-app/main/default/objects/High_Value_Deal_Closed__e/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Store the name of the closed Opportunity</description>
    <label>Opportunity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>