force-app/main/default/objects/High_Value_Deal_Closed__e/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <description>Stores the Salesforce ID of the Opportunity Owner, used for targeting the notification to the deal owner.</description>
    <label>Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>